src/components/sidebar/components/sidebar-nav/sidebar-nav-menu-item/sidebar-nav-menu-item.module.css
.sidebarNavMenuItem {
  composes: g-focus-border-and-box-shadow-light from global;
  align-items: center;
  background-color: white;
  border-radius: 5px;
  border: 1px solid transparent;
  color: var(--token-color-palette-neutral-500);
  display: flex;
  font-size: 14px;
  font-weight: 400;
  gap: 8px;
  justify-content: space-between;
  line-height: 18px;
  margin-bottom: 2px;
  padding: 8px;
  position: relative;
  text-align: left;
  width: 100%;
  z-index: 0;

  &:focus,
  &:hover,
  &[aria-current='page'],
  &[aria-expanded='true'] {
    color: var(--token-color-palette-neutral-700);
  }

  /* AKA active */
  &[aria-current='page'] {
    background-color: var(--token-color-palette-neutral-200);
  }

  /* AKA open */
  &[aria-expanded='true'] {
    margin-bottom: 0;

    & svg {
      transform: rotate(90deg);
    }
  }

  /* AKA active and open */
  &[aria-expanded='true'],
  &[aria-current='page'] {
    font-weight: 500;
  }

  &:focus {
    z-index: 1;
  }

  /*
  Hover styles take precedence over focus & active styles, so hover styles
  should be defined after them.
  */
  &:hover {
    background-color: var(--token-color-palette-neutral-100);
  }
}

.divider {
  background-color: var(--token-color-palette-alpha-200);
  color: var(--token-color-palette-alpha-200);
  margin: 16px 8px;
}

.navMenuItemLabel {
  margin-right: 8px;
  width: 100%;
}

.heading {
  color: var(--token-color-foreground-faint);
  margin-bottom: 16px;
  margin-top: 24px;
  padding: 0 8px;
}

